fixed major layout bug

--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -51,8 +51,6 @@
 .blurb {
 	display: block;
 	width: 800px;
-	margin-top: 50px;
-	margin-right: 50px; 
 	float: right;
 }
 
